<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".select">

    <Button
            android:text="@string/settings"
            android:layout_width="147dp"
            android:layout_height="137dp"
            android:id="@+id/button6"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:background="@drawable/selectbutton" android:textColor="@color/colorAccent"
            app:layout_constraintTop_toTopOf="@+id/button5"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.927" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>
    <Button
            android:text="@string/hospital"
            android:layout_width="150dp"
            android:layout_height="137dp"
            android:id="@+id/button5"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/button3"
            android:background="@drawable/selectbutton" android:textColor="@color/colorAccent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.076" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.111"/>
    <Button
            android:text="@string/add_notification"
            android:layout_width="151dp"
            android:layout_height="137dp"
            android:id="@+id/button4"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" android:background="@drawable/selectbutton"
            android:textColor="@color/colorAccent"
            app:layout_constraintTop_toTopOf="@+id/button3"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/button5"
            app:layout_constraintVertical_bias="0.0" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="1.0"/>
    <Button
            android:text="@string/find_partner"
            android:layout_width="150dp"
            android:layout_height="137dp"
            android:id="@+id/button3"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/button" android:background="@drawable/selectbutton"
            android:textColor="@color/colorAccent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.076"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"/>
    <Button
            android:text="@string/buying"
            android:layout_width="150dp"
            android:layout_height="137dp"
            android:id="@+id/button"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.106"
            android:background="@drawable/selectbutton"
            android:textColor="@color/colorAccent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.076"/>
    <Button
            android:text="@string/selling"
            android:layout_width="150dp"
            android:layout_height="137dp"
            android:id="@+id/button2"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" android:background="@drawable/selectbutton"
            android:textColor="@color/colorAccent"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toTopOf="@+id/button" app:layout_constraintVertical_bias="0.0"
            app:layout_constraintBottom_toTopOf="@+id/button3" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="1.0"/>
</android.support.constraint.ConstraintLayout>