<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/txtboxpassword"
            tools:ignore="MissingConstraints"
            app:layout_constraintStart_toEndOf="@+id/txtpassword" android:layout_marginStart="32dp"
            android:textColorLink="@color/colorAccent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@+id/txtpassword"
            app:layout_constraintHorizontal_bias="0.333" android:autofillHints=""/>
    <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:ems="10"
            android:id="@+id/txtboxusername"
            tools:ignore="MissingConstraints"
            app:layout_constraintStart_toEndOf="@+id/txtusername"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.272"
            app:layout_constraintTop_toTopOf="@+id/txtusername"/>
    <TextView
            android:text="@string/username"
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:id="@+id/txtusername" tools:ignore="MissingConstraints"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.341"
            android:layout_marginStart="52dp" app:layout_constraintStart_toStartOf="@+id/guideline4"
            tools:textSize="16sp" android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/colorPrimary" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/password"
            android:layout_width="80dp"
            android:layout_height="41dp" android:id="@+id/txtpassword"
            tools:ignore="MissingConstraints"
            tools:textSize="17sp" android:textColor="@color/colorPrimary"
            android:layout_marginTop="36dp" app:layout_constraintTop_toBottomOf="@+id/txtusername"
            android:layout_marginStart="52dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"/>
    <Button
            android:text="login"
            android:layout_width="127dp"
            android:layout_height="70dp" android:id="@+id/loginbtn"
            tools:ignore="HardcodedText,MissingConstraints"
            style="@style/Widget.AppCompat.Button.Borderless"
            tools:text="LOG IN"
            android:background="@drawable/buttondr"
            android:textAppearance="@style/TextAppearance.AppCompat" android:textColor="@color/colorAccent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/txtboxpassword" app:layout_constraintHorizontal_bias="0.182"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline2" app:layout_constraintGuide_begin="-64dp"
                                          android:orientation="horizontal"/>
    <android.support.constraint.Group android:layout_width="wrap_content" android:layout_height="wrap_content"
                                      android:id="@+id/group"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline3" app:layout_constraintGuide_begin="-1dp"
                                          android:orientation="vertical"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline4" app:layout_constraintGuide_begin="1dp"
                                          android:orientation="vertical"/>
    <Button
            android:text="@string/sign_up"
            android:layout_height="70dp"
            android:id="@+id/button7" android:background="@drawable/buttondr"
            android:layout_width="127dp"
            app:layout_constraintTop_toTopOf="@+id/loginbtn" app:layout_constraintStart_toEndOf="@+id/loginbtn"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.548" app:layout_constraintVertical_bias="0.0"/>
</android.support.constraint.ConstraintLayout>